<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="FTP Einstellungen" >
        <EditTextPreference
            android:defaultValue="192.168.0.5"
            android:key="@string/ftp_address"
            android:persistent="true"
            android:summary="192.168.0.5"
            android:title="Address" />
        <EditTextPreference
            android:defaultValue="leichten"
            android:key="@string/ftp_username"
            android:persistent="true"
            android:summary="leichten"
            android:title="Username" />
        <EditTextPreference
            android:defaultValue="leichten"
            android:inputType="textPassword"
            android:key="@string/ftp_password"
            android:persistent="true"
            android:summary="leichten"
            android:title="Password" />

        <ListPreference
            android:defaultValue="TLS"
            android:entries="@array/connectiontypes"
            android:entryValues="@array/connectiontypes"
            android:key="@string/ftp_conntype"
            android:persistent="true"
            android:title="Connection Type" />

        <EditTextPreference
            android:defaultValue="21"
            android:inputType="textPassword"
            android:key="@string/ftp_port"
            android:persistent="true"
            android:summary="21"
            android:title="@string/ftp_port" />
    </PreferenceCategory>

</PreferenceScreen>